--- a/jupyter notebooks/EDA.IPYNB
+++ b/jupyter notebooks/EDA.IPYNB
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0051c811",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "fdf15ac1",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
    ],
    "source": [
     "# Load the data\n",
-    "df = pd.read_csv('data/political_leaning.csv')\n",
+    "df = pd.read_csv('../data/political_leaning.csv')\n",
     "\n",
     "print(df.info())\n",
     "print(df.head())\n"
